# Network-reconstruction-Jeffrey

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
trade_jeffreys/: AUTHORS.md  CITATION.cff  LICENSE  README.md  USAGE.md  __init__.py  data_loading.py  examples.py  jeffreys.py  pipeline.py  plotting.py  regions.py  two_param.py  validation.py  visualisation.py  workflow.py
trade_jeffreys/notebooks/: BACI20_wood_real_data_usage.html  jeffreys_synthetic_usage.html  jeffreys_synthetic_usage.ipynb
